<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|center_horizontal|center_vertical"
     >     
    
    <ImageView 
        android:id="@+id/activity_sign_in_imageview_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription=""
        android:src="@drawable/ic_sign_in_car"
        />

    <EditText 
        android:id="@+id/activity_sign_in_edittext_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_sign_in_edittext_account"
        />

    <EditText 
        android:id="@+id/activity_sign_in_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_sign_in_edittext_password"
        android:inputType="textPassword"
        />
    
    <RelativeLayout 
        android:id="@+id/activity_sign_in_relativeLayout_account_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <CheckBox 
            android:id="@+id/activity_sign_in_checkbox_remember_account"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/activity_sign_in_checkbox_remember_account"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            />
        
        <TextView 
            android:id="@+id/activity_sign_in_textview_forgot_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/activity_sign_in_textview_forgot_password"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
         
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/activity_sign_in_relativeLayout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button 
            android:id="@+id/activity_sign_in_button_sign_in"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/activity_sign_in_button_sign_in"
            />
        
        <Button 
            android:id="@+id/activity_sign_in_button_sign_up"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/activity_sign_in_button_sign_up"
            android:layout_toRightOf="@+id/activity_sign_in_button_sign_in"
            android:layout_marginLeft="20dp"
            />
        
    </RelativeLayout>
</LinearLayout>
