<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_contacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <!-- title Bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
       	android:background="@drawable/title_bar"
        >

        <ImageView
            android:id="@+id/fragment_home_imageview_user_photo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription=""
            android:src="@drawable/ic_user" />

        <TextView
            android:id="@+id/fragment_home_textview_user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="1388888888"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>
    
    <!-- note -->
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        >
    
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
 
		    <!-- 货源信息 -->
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="4dp"
		        android:background="@drawable/preference_single_item"
		        android:clickable="true"
		        android:gravity="center_vertical"
		        android:id="@+id/fragment_home_relativeLayout_goods_message"
		         >
		
		        <ImageView
		            android:id="@+id/fragment_home_imageview_goods_message"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:scaleType="matrix"
		            android:src="@drawable/test_preference_icon" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_toRightOf="@id/fragment_home_imageview_goods_message"
		            android:padding="8dp"
		            android:text="@string/fragment_home_textview_goods_message"
		            android:textColor="#000"
		            android:textSize="17sp" />
		
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:scaleType="matrix"
		            android:src="@drawable/custom_preference_submenu" />
		    </RelativeLayout>
		
		    <!-- 交易记录 -->
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="4dp"
		        android:background="@drawable/preference_single_item"
		        android:clickable="true"
		        android:gravity="center_vertical" 
		        android:id="@+id/fragment_home_relativeLayout_transaction_message"
		        >
		
		        <ImageView
		            android:id="@+id/fragment_home_image_view_transaction_message"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:scaleType="matrix"
		            android:src="@drawable/test_preference_icon" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_toRightOf="@id/fragment_home_image_view_transaction_message"
		            android:padding="8dp"
		            android:text="@string/fragment_home_textview_transaction_message"
		            android:textColor="#000"
		            android:textSize="17sp" />
		
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:scaleType="matrix"
		            android:src="@drawable/custom_preference_submenu" />
		    </RelativeLayout>
		
		    <!-- 系统消息 -->
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="4dp"
		        android:background="@drawable/preference_single_item"
		        android:clickable="true"
		        android:gravity="center_vertical"
		        android:id="@+id/fragment_home_relativeLayout_system_message"
		         >
		
		        <ImageView
		            android:id="@+id/fragment_home_imageview_system_message"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:scaleType="matrix"
		            android:src="@drawable/test_preference_icon" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_toRightOf="@id/fragment_home_imageview_system_message"
		            android:padding="8dp"
		            android:text="@string/fragment_home_textview_system_message"
		            android:textColor="#000"
		            android:textSize="17sp" />
		
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:scaleType="matrix"
		            android:src="@drawable/custom_preference_submenu" />
		    </RelativeLayout>
		
		    <!-- 发布路径记录 -->
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="4dp"
		        android:background="@drawable/preference_single_item"
		        android:clickable="true"
		        android:gravity="center_vertical" 
		        android:id="@+id/fragment_home_relativeLayout_issuance_path_message"
		        >
		
		        <ImageView
		            android:id="@+id/fragment_home_imageview_issuance_path_message"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:scaleType="matrix"
		            android:src="@drawable/test_preference_icon" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_toRightOf="@id/fragment_home_imageview_issuance_path_message"
		            android:padding="8dp"
		            android:text="@string/fragment_home_textview_issuance_path_message"
		            android:textColor="#000"
		            android:textSize="17sp" />
		
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:scaleType="matrix"
		            android:src="@drawable/custom_preference_submenu" />
		    </RelativeLayout>
		
		    <!-- 积分消费记录 -->
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="4dp"
		        android:background="@drawable/preference_single_item"
		        android:clickable="true"
		        android:gravity="center_vertical" 
		        android:id="@+id/fragment_home_relativeLayout_integral_message"
		        >
		
		        <ImageView
		            android:id="@+id/fragment_home_imageview_integral_message"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_centerVertical="true"
		            android:scaleType="matrix"
		            android:src="@drawable/test_preference_icon" />
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerVertical="true"
		            android:layout_toRightOf="@id/fragment_home_imageview_integral_message"
		            android:padding="8dp"
		            android:text="@string/fragment_home_textview_integral_message"
		            android:textColor="#000"
		            android:textSize="17sp" />
		
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:scaleType="matrix"
		            android:src="@drawable/custom_preference_submenu" />
		    </RelativeLayout>
	    </LinearLayout>
	</ScrollView>
</LinearLayout>